infrastructure/crossplane/telegraf/kubernetes_deplolyment/telegraf_operator_v1.3.11.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: telegraf-operator
---
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: telegraf-operator
  namespace: telegraf-operator
  labels:
    app: telegraf-operator
webhooks:
  - name: telegraf.influxdata.com
    # enable the example below to limit to namespaces with specific labels only
    # namespaceSelector:
    #   matchLabels:
    #     controller: telegraf-operator
    admissionReviewVersions: ["v1"]
    sideEffects: None
    clientConfig:
      service:
        name: telegraf-operator
        namespace: telegraf-operator
        path: "/mutate-v1-pod"
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUZwRENDQTR5Z0F3SUJBZ0lVZHZzQTlwWGRxZ2xBWk9hem9LUVdNM1VwRlRFd0RRWUpLb1pJaHZjTkFRRUwKQlFBd1ZERUxNQWtHQTFVRUJoTUNWVk14Q3pBSkJnTlZCQWdNQWtOQk1SWXdGQVlEVlFRSERBMVRZVzRnUm5KaApibU5wYzJOdk1STXdFUVlEVlFRS0RBcEpibVpzZFhoRVlYUmhNUXN3Q1FZRFZRUUxEQUpKVkRBZUZ3MHlNVEV4Ck1EVXhOVEF6TkROYUZ3MHpNVEV4TURNeE5UQXpORE5hTUZReEN6QUpCZ05WQkFZVEFsVlRNUXN3Q1FZRFZRUUkKREFKRFFURVdNQlFHQTFVRUJ3d05VMkZ1SUVaeVlXNWphWE5qYnpFVE1CRUdBMVVFQ2d3S1NXNW1iSFY0UkdGMApZVEVMTUFrR0Ex [...]
    objectSelector:
      matchExpressions:
        - key: "telegraf.influxdata.com/ignore"
          operator: DoesNotExist
    rules:
      - operations: ["CREATE", "DELETE"]
        apiGroups: [""]
        apiVersions: ["v1"]
        resources: ["pods"]
    failurePolicy: Fail
    reinvocationPolicy: IfNeeded
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: telegraf-operator
  namespace: telegraf-operator
  labels:
    app: telegraf-operator
spec:
  replicas: 1
  selector:
    matchLabels:
      app: telegraf-operator
  template:
    metadata:
      labels:
        app: telegraf-operator
        telegraf.influxdata.com/ignore: "true"
    spec:
      serviceAccountName: telegraf-operator
      containers:
        - name: controller
          image: quay.io/influxdb/telegraf-operator:latest
          # use IfNotPresent image pull policy to allow pushing / injecting
          # container images to Kubernetes directly (such as when using kind)
          imagePullPolicy: IfNotPresent
          args:
            # for development purposes, enable internal plugin to report
            # telegraf metrics even if no other data is available
            - --enable-default-internal-plugin=true
            # default class to use if not specified by the pod
            - --telegraf-default-class=basic
            - --telegraf-classes-directory=/config/classes
            # allow injecting telegraf-istio sidecar for pods with
            # istio sidecar annotations enabled
            - --enable-istio-injection=true
            # if telegraf image supports it (as of version 1.19.2), telegraf-watch-config can be
            # set to enable telegraf-opeator and telegraf hot reloading changes to classes secret
            - --telegraf-watch-config=inotify
          ports:
            - name: https
              containerPort: 9443
              protocol: TCP
          volumeMounts:
            - name: certs
              readOnly: true
              mountPath: "/etc/certs"
            - name: telegraf-operator-classes
              readOnly: true
              mountPath: "/config/classes"
      volumes:
        - name: certs
          secret:
            secretName: telegraf-operator-certs
        - name: telegraf-operator-classes
          secret:
            secretName: telegraf-operator-classes
---
apiVersion: v1
kind: Service
metadata:
  name: telegraf-operator
  namespace: telegraf-operator
  labels:
    app: telegraf-operator
spec:
  ports:
    - port: 443
      targetPort: 9443
      protocol: TCP
      name: https
  selector:
    app: telegraf-operator
